fixed arrow bug on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@ h3 span {
 .blinking-caret {
   color: #000;
   overflow: hidden; 
-  border-right: .05em solid black;
+  border-right: .1em solid black;
   white-space: nowrap; 
   animation: blink-caret 1s step-end infinite;
 }
@@ -61,7 +61,7 @@ h3 span {
 /* The typewriter cursor effect */
 @keyframes blink-caret {
   from, to { border-color: transparent }
-  50% { border-color: #FF9000 }
+  50% { border-color: #000 }
 }
 
 .arrows {
@@ -281,14 +281,16 @@ h1, h2, h3, h4, h5, h6, figure {
   background-position: center center;
   background-repeat: no-repeat;
   position: relative;
-  height: 200px;
-  width: 200px;
+  height: 220px;
+  width: 220px;
   margin: 0 auto;
   margin-bottom: 30px;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
   -ms-border-radius: 50%;
   border-radius: 50%;
+  border: 5px solid white;
+  box-shadow: rgba(0,0,0,0.8) 0 0 2px;
 }
 #fh5co-header .display-tc .fh5co-social-icons li a,
 .fh5co-cover .display-tc .fh5co-social-icons li a {
